Bug 309452 - UML diagrams outside image problem
Summary: UML diagrams outside image problem
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL: https://bazaar.launchpad.net/~avaneya...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-02 23:33 UTC by Kip
Modified: 2013-11-02 17:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kip 2012-11-02 23:33:00 UTC
I'm having problems with my UML diagrams. Some of the diagrams when exported on the command line appear to be partially outside of the image. I can replicate the same problem by using the GUI instead of the command line interface as well.

Here is my project file:
<https://bazaar.launchpad.net/~avaneya/avaneya/trunk/view/head:/Documentation/Contributors/AresEngine/UML/Engine.xmi>

This is the command I am using to export:
$ umbrello --export svg Engine.xmi --directory Output

Here is my Umbrello version:

$ umbrello --version
Qt: 4.8.1
KDE Development Platform: 4.8.5 (4.8.5)
Umbrello UML Modeller: 2.8.5-r1317478

Reproducible: Always
Comment 1 Ralf Habacker 2012-11-03 17:49:46 UTC
SVN commit 1323867 by habacker:

Bug fix.


 M  +1 -1      umlviewimageexportermodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1323867
Comment 2 Kip 2012-11-03 20:56:43 UTC
Thanks Ralph. I confirm your patch worked. Good eye.