Bug fix.

BUG: 309452

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1323867